# mermin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  python.yml  release.yml
docs/superpowers/plans/: 2026-04-06-mermin-implementation.md
docs/superpowers/specs/: 2026-04-06-mermin-design.md
mermin/: Cargo.toml  README.md
mermin-core/: Cargo.toml  README.md
mermin-core/src/: cell.rs  contour.rs  error.rs  field.rs  lib.rs  types.rs
mermin-orient/: Cargo.toml  README.md
mermin-orient/src/: cell_orientation.rs  gaussian.rs  gradient.rs  katic_field.rs  lib.rs  multiscale.rs  structure_tensor.rs
mermin-py/: Cargo.toml  README.md  pyproject.toml
mermin-py/src/: lib.rs  py_orient.rs  py_shape.rs  py_stats.rs  py_theory.rs  py_topo.rs
mermin-shape/: Cargo.toml  README.md
mermin-shape/src/: fourier.rs  katic_shape.rs  lib.rs  minkowski.rs  morphometrics.rs
mermin-stats/: Cargo.toml  README.md
mermin-stats/src/: bootstrap.rs  correlation.rs  lib.rs  order.rs  permutation.rs  ripley.rs
mermin-tests/: README.md
mermin-theory/: Cargo.toml  README.md
mermin-theory/src/: activity.rs  frank.rs  frank_delaunay.rs  landau_de_gennes.rs  lib.rs  volterra_output.rs
mermin-topo/: Cargo.toml  README.md
mermin-topo/src/: defects.rs  delaunay_defects.rs  director_mesh.rs  lib.rs  persistence.rs  poincare_hopf.rs
mermin/src/: lib.rs
python/mermin/: __init__.py  io.py  pipeline.py  segment.py  viz.py
tests/: test_smoke.py  test_tissue_analysis.py
