[package]
name = "mermin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and traits for k-atic alignment analysis"
readme = "README.md"

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
