[package]
name = "mermin-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spatial statistics, correlation functions, and hypothesis testing"
readme = "README.md"

[dependencies]
mermin-core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
